--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@ueaweb/laravel-react-csrf-input": "^0.1.5",
     "axios": "^1.6.2",
     "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-global-loading": "^1.0.9",
+    "react-loading-screen": "^0.0.17",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
+    "sweetalert2": "^11.10.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
