--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.6.2",
     "jquery": "^3.7.1",
     "react": "^18.2.0",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.2.0",
     "react-global-loading": "^1.0.9",
     "react-loading-screen": "^0.0.17",
